test_data/pos/ss/652618/Windows/652618.diso.rtf
#AUCpreD: order/disorder state prediction results by profile mode 
#Disorder residues are marked with asterisks (*) above threshold 0.500 
# Ordered residues are marked with dots (.) below threshold 0.500 
   1 M * 0.964 
   2 T . 0.383 
   3 I . 0.145 
   4 Y . 0.093 
   5 L . 0.081 
   6 S . 0.072 
   7 N . 0.067 
   8 A . 0.060 
   9 I . 0.054 
  10 E . 0.048 
  11 N . 0.041 
  12 A . 0.033 
  13 T . 0.029 
  14 S . 0.026 
  15 I . 0.024 
  16 E . 0.022 
  17 Q . 0.021 
  18 V . 0.019 
  19 V . 0.018 
  20 E . 0.017 
  21 L . 0.017 
  22 I . 0.017 
  23 N . 0.019 
  24 E . 0.024 
  25 G . 0.029 
  26 T . 0.034 
  27 C . 0.037 
  28 E . 0.040 
  29 G . 0.040 
  30 M . 0.036 
  31 E . 0.029 
  32 G . 0.022 
  33 I . 0.016 
  34 E . 0.014 
  35 F . 0.012 
  36 T . 0.012 
  37 A . 0.012 
  38 D . 0.011 
  39 I . 0.011 
  40 L . 0.011 
  41 A . 0.011 
  42 G . 0.011 
  43 Q . 0.010 
  44 Y . 0.010 
  45 A . 0.010 
  46 W . 0.010 
  47 S . 0.010 
  48 A . 0.011 
  49 A . 0.011 
  50 K . 0.011 
  51 D . 0.011 
  52 F . 0.012 
  53 V . 0.013 
  54 D . 0.015 
  55 S . 0.016 
  56 A . 0.017 
  57 G . 0.017 
  58 M . 0.016 
  59 T . 0.016 
  60 A . 0.015 
  61 D . 0.013 
  62 D . 0.013 
  63 L . 0.012 
  64 E . 0.012 
  65 A . 0.011 
  66 Q . 0.011 
  67 L . 0.012 
  68 E . 0.012 
  69 F . 0.012 
  70 L . 0.012 
  71 S . 0.013 
  72 A . 0.014 
  73 A . 0.015 
  74 G . 0.015 
  75 A . 0.015 
  76 V . 0.015 
  77 F . 0.015 
  78 S . 0.015 
  79 E . 0.016 
  80 S . 0.016 
  81 V . 0.016 
  82 A . 0.017 
  83 V . 0.017 
  84 D . 0.018 
  85 H . 0.019 
  86 G . 0.020 
  87 L . 0.022 
  88 K . 0.027 
  89 L . 0.038 
  90 A . 0.074 
  91 A . 0.230 
  92 A * 0.720 
  93 D * 0.984 
  94 T * 0.999 
  95 E * 1.000 
