test_data/neg/ss/655291/Windows/655291.diso.rtf
#AUCpreD: order/disorder state prediction results by profile mode 
#Disorder residues are marked with asterisks (*) above threshold 0.500 
# Ordered residues are marked with dots (.) below threshold 0.500 
   1 M * 1.000 
   2 K * 0.988 
   3 K * 0.618 
   4 R . 0.112 
   5 Y . 0.042 
   6 K . 0.028 
   7 V . 0.022 
   8 T . 0.018 
   9 A . 0.016 
  10 L . 0.015 
  11 F . 0.015 
  12 E . 0.015 
  13 D . 0.015 
  14 G . 0.014 
  15 T . 0.013 
  16 S . 0.013 
  17 Q . 0.012 
  18 C . 0.012 
  19 L . 0.012 
  20 V . 0.012 
  21 V . 0.012 
  22 G . 0.012 
  23 N . 0.012 
  24 F . 0.012 
  25 S . 0.013 
  26 S . 0.013 
  27 P . 0.013 
  28 T . 0.013 
  29 N . 0.014 
  30 A . 0.014 
  31 W . 0.014 
  32 C . 0.015 
  33 A . 0.016 
  34 A . 0.016 
  35 M . 0.017 
  36 R . 0.018 
  37 N . 0.019 
  38 L . 0.021 
  39 T . 0.024 
  40 P . 0.030 
  41 E . 0.036 
  42 G . 0.040 
  43 I . 0.044 
  44 A . 0.046 
  45 R . 0.049 
  46 V . 0.051 
  47 Q . 0.056 
  48 H . 0.066 
  49 Y . 0.084 
  50 N . 0.123 
  51 V . 0.202 
  52 E . 0.368 
  53 E * 0.639 
  54 I * 0.890 
  55 S * 0.984 
  56 K * 0.999 
